--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "clsx": "^1.2.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "5.3.0"
